# ring_tsfast

./: .gitignore  compare_dfjimu.py  compare_diodem.py  compare_ring.py  eval_dfjimu.py  pack_dataset.py  plot_comparison.py  pyproject.toml  readme.md  results_mogen.h5  results_ring.h5  train_rnno.py  train_step1_generateData_v2.py  train_step1_mujoco_diverse.py  train_step2_trainRing_v2.py  train_step2_trainRing_v2_rnno.py  train_step2_trainRing_v2_rnno_tsfast.py
docs/: data_generation_design.md  diodem_failure_analysis.md
