[project]
name = "ring-tsfast"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "numpy",
    "qmt",
    "tsfast",
    "torch-optimizer",
]

[project.optional-dependencies]
jax = ["imt-ring", "fire", "wandb"]

[tool.uv.sources]
tsfast = { path = "../tsfast", editable = true }

[tool.setuptools]
py-modules = []
