[project]
name = "ring-tsfast"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "numpy",
    "qmt",
    "tsfast",
    "torch-optimizer",
    "pytorch-optimizer>=3.10.0",
]

[project.optional-dependencies]
jax = ["imt-ring", "fire", "wandb"]
imt = ["imt-imt", "imt-diodem", "onnxruntime-gpu", "tensorrt-cu12"]
dfjimu = ["dfjimu", "scipy"]

[tool.uv]
exclude-dependencies = ["onnxruntime"]

[tool.uv.sources]
tsfast = { git = "https://github.com/daniel-om-weber/tsfast.git" }
imt-imt = { git = "https://github.com/simon-bachhuber/imt.git" }
dfjimu = { git = "https://github.com/daniel-om-weber/dfjimu.git" }

[tool.setuptools]
py-modules = []
